--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aniso8601==8.0.0
 Click==7.0
 Flask==1.1.1
-Flask-JWT==0.3.2
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
 FlaskRESTful==0.1
@@ -15,3 +14,4 @@ SQLAlchemy==1.3.13
 Werkzeug==1.0.0
 uWSGI==2.0.18
 psycopg2==2.8.4
+Flask-JWT-Extended==3.24.1
